tests/error/private_func_out.gw
// [contains] can only be used at class scope
private fun void test(){}
